--- a/src/app/servr-element/servr-element.component.html
+++ b/src/app/servr-element/servr-element.component.html
@@ -4,6 +4,6 @@ class="panel panel-default">
 <div class="panel-body">
   <p>
     <strong *ngIf="element.type === 'server'" style="color: red">{{ element.content }}</strong>
-    <em *ngIf="element.type === 'blueprint'" style="color: blueviolet">{{ element.content }}</em>
+    <em *ngIf="element.type === 'blueprint'" style="color: rgb(76, 43, 226)">{{ element.content }}</em>
   </p>
 </div>
